--- a/FlyGameProjects/FlyGameEngine/FlyGameEngine.vcxproj
+++ b/FlyGameProjects/FlyGameEngine/FlyGameEngine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Util\misc.h" />
     <ClInclude Include="Util\Importer\ObjectImporter.h" />
     <ClInclude Include="Util\Importer\ResourceImporter.h" />
+    <ClInclude Include="Util\MutexHandler.h" />
     <ClInclude Include="Util\OctTree.h" />
     <ClInclude Include="Util\Proxy.h" />
     <ClInclude Include="Util\SmartPtrs.h" />
